tests/compError/missingField.ucl
// compError
// error: struct instance is missing field 'b'
// tests/compError/missingField.ucl:8 -> struct instance here
// tests/compError/missingField.ucl:6 -> missing field defined here

test = struct(a: Number, b: Number) {}

test {
	a = 1
}